Aspettative: sistemati accenti

--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -49,8 +49,8 @@ Versione: \insertversion
 
 \subsection{Obbligatorie}
 \begin{enumerate}
-\item Il sistema AJAXDRAW dovra' avere caratteristiche atte a poter elaborare figure/linee/testi vettoriali di vario genere.
-\item Il sistema sara' in grado di fornire all'utente le seguenti funzioni:
+\item Il sistema AJAXDRAW dovr\`a avere caratteristiche atte a poter elaborare figure/linee/testi vettoriali di vario genere.
+\item Il sistema sar\`a in grado di fornire all'utente le seguenti funzioni:
 
 \begin{list}{-}{}
 \item selezione
@@ -62,32 +62,32 @@ Versione: \insertversion
 \item testo
 \end{list}
 
-\item Il sistema permettera' all'utente di:
+\item Il sistema permetter\`a all'utente di:
 
 \begin{list}{-}{}
 \item cambiare il colore di riempimento
 \item cambiare il colore del bordo
 \item cambiare il colore della linea
-\item cambiare l'opacita'
+\item cambiare l'opacit\`a
 \item cambiare il posizionamento all'interno dell'area di disegno
 \item ridimensionare gli oggetti
 \end{list}
 
-\item Il sistema sara' in grado di leggere e salvare il contenuto dell'area di disegno in formato SVG.
-\item Il sistema sara' implementato seguendo gli standard del linguaggio di markup HTML 5. Il software dovra' quindi essere in grado di funzionare perfettamente in quei browser che implementano gli standard HTML 5 (Firefox, Safari, Opera e Chrome). 
-\item Il software utilizzera' il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale su web.
-\item Il software AJAXDRAW deve fornire la possibilita' di attivare un aiuto (manuale), per l'utilizzazione del sistema. 
+\item Il sistema sar\`a in grado di leggere e salvare il contenuto dell'area di disegno in formato SVG.
+\item Il sistema sar\`a implementato seguendo gli standard del linguaggio di markup HTML 5. Il software dovr\`a quindi essere in grado di funzionare perfettamente in quei browser che implementano gli standard HTML 5 (Firefox, Safari, Opera e Chrome). 
+\item Il software utilizzer\`a il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale su web.
+\item Il software AJAXDRAW deve fornire la possibilit\`a di attivare un aiuto (manuale), per l'utilizzazione del sistema. 
 \item Il sistema AJAXDRAW deve fornire un manuale per chiunque voglia estendere l'applicazione. 
 \end{enumerate}
 
 \subsection{Altamente Desiderabili}
 \begin{enumerate}
-\item Il sistema prevede la pubblicazione sul sito "www.sourceforge.net", in conformita' con i relativi requisiti di natura open-source, per favorire la continuita' del prodotto risultante.
+\item Il sistema prevede la pubblicazione sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura open-source, per favorire la continuit\`a del prodotto risultante.
 \end{enumerate}
 
 \subsection{Facolative}
 \begin{enumerate}
-\item Il sistema AJAXDRAW prevede di avvicinarsi il piu' possibile al programma client (open e free) "Inkscape". 
+\item Il sistema AJAXDRAW prevede di avvicinarsi il pi\`u possibile al programma client (open e free) "Inkscape". 
 \item Il sistema AJAXDRAW prevede di implementare le seguenti funzioni:
 
 \begin{list}{-}{}
@@ -98,8 +98,8 @@ Versione: \insertversion
 \item curve di bezier
 \end{list}
 
-\item Il sistema  AJAXDRAW prevede di implementare l'utilizzo della libreria "excanvas", open source disponibile su googlecode, la compatibilita' con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer).
-         Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sara' possibile far funzionare il disegnatore web su questi browser. 
+\item Il sistema  AJAXDRAW prevede di implementare l'utilizzo della libreria "excanvas", open source disponibile su googlecode, la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer).
+         Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
 \end{enumerate}
 
 \end{document}
