Invertiti nomi e cognomi

--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -1,7 +1,7 @@
 	\input{../TeX/base} %BASE!!!
 
 \title{\TITOLODOC}
-\author{Mirco Geremia}
+\author{Geremia Mirco}
 
 \begin{document}
 
@@ -80,7 +80,7 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%
-				{Pre-RR} & Mirco Geremia \\
+				{Pre-RR} &Geremia Mirco \\
 				\hline
 				{RR-RPP} & \\
 				\hline
@@ -105,7 +105,7 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%
-			{Pre-RR} & Piero Bizzotto  \\
+			{Pre-RR} & Bizzotto Piero \\
 			\hline
 			{RR-RPP} & \\
 			\hline
@@ -140,13 +140,13 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
-			0.3 &	05$\slash$12$\slash$2008 Correzioni sintattiche in seguito alla verifica & Mirco Geremia \\
+			0.3 &	05$\slash$12$\slash$2008 Correzioni sintattiche in seguito alla verifica & Geremia Mirco\\
 			\hline						
-			0.2 & 	 02$\slash$12$\slash$2008 Aggiunto Strumenti di sviluppo & Mirco Geremia \\
+			0.2 & 	 02$\slash$12$\slash$2008 Aggiunto Strumenti di sviluppo & Geremia Mirco \\
 			\hline
-			0.1 & 	 29$\slash$11$\slash$2008 Aggiunto Risorse e Comunicazione & Mirco Geremia \\
+			0.1 & 	 29$\slash$11$\slash$2008 Aggiunto Risorse e Comunicazione & Geremia Mirco\\
 			\hline
-    	 	0.0 & 	 28$\slash$11$\slash$2008 Prima stesura & Mirco Geremia \\
+    	 	0.0 & 	 28$\slash$11$\slash$2008 Prima stesura & Geremia Mirco\\
 
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%
