--- a/doc/StudioFattibilita/StudioDiFattibilita.tex
+++ b/doc/StudioFattibilita/StudioDiFattibilita.tex
@@ -1,7 +1,7 @@
 	\input{../TeX/base} %BASE!!!
 
 \title{\TITOLODOC}
-\author{Mirco Geremia}
+\author{Geremia Mirco}
 
 \begin{document}
 
@@ -82,7 +82,7 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-				{Pre-RR} & Mirco Geremia \\
+				{Pre-RR} & Geremia Mirco \\
 				\hline
 				{RR-RPP} & \\
 				\hline
@@ -107,7 +107,7 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			{Pre-RR} & Stefano Dissegna \\
+			{Pre-RR} & Dissegna Stefano \\
 			\hline
 			{RR-RPP} & \\
 			\hline
@@ -142,9 +142,9 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-    	 	0.1 & 	 21$\slash$11$\slash$2008 Aggiornato Fattibilit\`a tecnologica & Mirco Geremia \\
+    	 	0.1 & 	 21$\slash$11$\slash$2008 Aggiornato Fattibilit\`a tecnologica & Geremia Mirco \\
     	 	\hline
-    	 	0.0 & 	 19$\slash$11$\slash$2008 Prima bozza & Mirco Geremia \\
+    	 	0.0 & 	 19$\slash$11$\slash$2008 Prima bozza & Geremia Mirco \\
 
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
