--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{0.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.4} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Decomposizione del Capitolato in Aspettative} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -45,10 +45,10 @@ Versione: \insertversion
 
 \newpage
 
-\section{Decomposizione del Capitolato in Aspettative}
+\sezione{Decomposizione del Capitolato in Aspettative}
 
-\subsection{Obbligatorie}
-\begin{enumerate}
+\subsezione{Obbligatorie (ACO)}
+\begin{elenconumerato}[\textbf{ACO-}]{\subsecindent}
 \item Il sistema AJAXDRAW dovr\`a avere caratteristiche atte a poter elaborare figure/linee/testi vettoriali di vario genere.
 \item Il sistema sar\`a in grado di fornire all'utente le seguenti funzioni:
 
@@ -78,15 +78,15 @@ Versione: \insertversion
 \item Il software utilizzer\`a il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale su web.
 \item Il software AJAXDRAW deve fornire la possibilit\`a di attivare un aiuto (manuale), per l'utilizzazione del sistema. 
 \item Il sistema AJAXDRAW deve fornire un manuale per chiunque voglia estendere l'applicazione. 
-\end{enumerate}
+\end{elenconumerato}
 
-\subsection{Altamente Desiderabili}
-\begin{enumerate}
+\subsezione{Altamente Desiderabili (ACD)}
+\begin{elenconumerato}[\textbf{ACD-}]{\subsecindent}
 \item Il sistema prevede la pubblicazione sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura open-source, per favorire la continuit\`a del prodotto risultante.
-\end{enumerate}
+\end{elenconumerato}
 
-\subsection{Facolative}
-\begin{enumerate}
+\subsezione{Facolative (ACF)}
+\begin{elenconumerato}[\textbf{ACF-}]{\subsecindent}
 \item Il sistema AJAXDRAW prevede di avvicinarsi il pi\`u possibile al programma client (open e free) "Inkscape". 
 \item Il sistema AJAXDRAW prevede di implementare le seguenti funzioni:
 
@@ -100,6 +100,6 @@ Versione: \insertversion
 
 \item Il sistema  AJAXDRAW prevede di implementare l'utilizzo della libreria "excanvas", open source disponibile su googlecode, la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer).
          Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
-\end{enumerate}
+\end{elenconumerato}
 
 \end{document}
