Aggiunta tabella Aspettative-Requisiti

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -245,6 +245,48 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
 \sezione{Resoconto delle attivit\`a di verifica}
 
 \subsezione{Tracciamento componenti - requisiti}
+
+\begin{table}[h]
+\begin{center}
+		  \begin{tabular}
+					 {@{\extracolsep{\fill}}|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			\textbf{Aspettative}  & \textbf{Requisiti} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			\hline
+		 ACO-1 &  \\
+		 \hline
+		 ACO-2 & RFO-1 RFO-2 RFO-3 RFO-4\\ & RFO-5 RFO-6 RFO-7 RFO-8\\ & RFO-11 RF0-12 RFO-13 \\
+		 \hline
+		 ACO-3 & RFO-8 RFO-9 RFO-10  \\
+		 \hline
+		 ACO-4 & RFO-14 RFO-15  \\
+		 \hline
+		 ACO-5 & RAO-2 RAO-6 \\
+		 \hline
+		 ACO-6 & RAO-3 \\
+		 \hline
+		 ACO-7 & RIO-1 RIO-2 RIO-3 RIO-4 \\
+		 \hline
+		 ACO-8 & RAO-4 RQO-3 RQO-4 RQO-5 RQO-6  \\
+		 \hline
+		 ACD-1 & RAO-5 \\
+		 \hline
+		 ACF-1 & \\
+		 \hline
+		 ACF-2 & RFD-1 RFD-2 RFF-1 RFF-2 \\
+		 \hline
+		 ACF-3 & RAD-1 \\
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
+		\hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Aspettative-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab:aspettative}
+	\end{center}
+\end{table}
+
 \subsezione{Dettaglio delle verifiche tramite analisi}
 \subsezione{Dettaglio delle verifiche tramite prove (test)}
 \subsezione{Dettaglio dell'esito delle revisioni}
